# brocoli

./: .gitignore  .gitlab-ci.yml  LICENSE  MANIFEST.in  TheFractalBot.py  __main__.py  brocoli.kv  brocoli.py  camera.py  colorize.py  colors.py  compute.py  dispatcher_extension.py  flake.nix  fractal.py  main.py  pyproject.toml  random_fractal.py  readme.md  requirements.txt  setup.py  shell.nix  tabs.py
brocoli/: TheFractalBot.py  __main__.py  brocoli.kv  brocoli.py  fractal.py  kivymain.py
brocoli/data/: gradients
brocoli/processing/: camera.py  colorize.py  colors.py  compute.py  gradients.py  preprocess.py  random_fractal.py
brocoli/tabs/: base.py  camera.kv  camera.py  dispatcher_extension.py  gradient.kv  gradient.py  preproc.kv  preproc.py  save.py
processing/: __init__.py  camera.py  colorize.py  colors.py  compute.py  preprocess.py  random_fractal.py
tabs/: __init__.py  base.py  camera.kv  camera.py  dispatcher_extension.py  gradient.kv  gradient.py  preproc.kv  preproc.py  save.kv  save.py
