[tool.poetry]
name = "brocoli"
version = "0.3.1"
description = "{random, gui, cli} fractal generator"
authors = ["ddorn <diego.dorn@free.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numba = "^0.48.0"
tweepy = "^3.8.0"
numpy = "^1.18.2"
click = "^7.1.1"
pillow = "^7.1.1"
colour = "^0.1.5"
pyyaml = "^5.3.1"


# A list of all of the optional dependencies, some of which are included in the
# below `extras`. They can be opted into by apps.
kivy = { version = "^1.1", optional = true}
kivymd = {version = "^0.104.0", optional = true}

[tool.poetry.dev-dependencies]

[tool.poetry.extras]
gui = ["kivy", "kivymd"]

[tool.poetry.scripts]
brocoli = "brocoli.brocoli:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
