[tool.poetry]
name = "brocoli"
version = "0.3.3"
description = "{random, gui, cli} fractal generator"
authors = ["ddorn <diego.dorn@free.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numba = "==0.51.1"
tweepy = "*"
click = "*"
colour = "*"
pyyaml = "*"

# Provided by existing dependencies, so let's use those to avoid conflicting
# versions in nix build
# numpy = "*"
# pillow = "*"

# A list of all of the optional dependencies, some of which are included in the
# below `extras`. They can be opted into by apps.
kivy = { version = "*", optional = true, allow-prereleases = true }
kivymd = { version = "*", optional = true }

[tool.poetry.dev-dependencies]

[tool.poetry.extras]
gui = ["kivy", "kivymd"]

[tool.poetry.scripts]
brocoli = "brocoli.brocoli:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
